// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component should render correctly with  1`] = `
<div
  className="sc-bcXHqe hqMfVG"
>
   alert
</div>
`;

exports[`Alert component should render correctly with center 1`] = `
<div
  className="sc-bcXHqe hqMfVG"
>
  center
   alert
</div>
`;

exports[`Alert component should render correctly with danger 1`] = `
<div
  className="sc-bcXHqe gIGJgc"
>
  This is a 
  danger
   alert
</div>
`;

exports[`Alert component should render correctly with info 1`] = `
<div
  className="sc-bcXHqe hqMfVG"
>
  This is a 
  info
   alert
</div>
`;

exports[`Alert component should render correctly with left 1`] = `
<div
  className="sc-bcXHqe hqstzO"
>
  left
   alert
</div>
`;

exports[`Alert component should render correctly with right 1`] = `
<div
  className="sc-bcXHqe ejGkCh"
>
  right
   alert
</div>
`;

exports[`Alert component should render correctly with success 1`] = `
<div
  className="sc-bcXHqe dcClpc"
>
  This is a 
  success
   alert
</div>
`;

exports[`Alert component should render correctly with warning 1`] = `
<div
  className="sc-bcXHqe iwtANZ"
>
  This is a 
  warning
   alert
</div>
`;
